# PythonDefaultProject

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  commands.txt  install.sh  mypy.ini  poetry-update.py  pyproject.toml
.mypy_cache/3.9/: _ast.data.json  _ast.meta.json  _collections_abc.data.json  _collections_abc.meta.json  abc.data.json  abc.meta.json  array.data.json  array.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  genericpath.data.json  genericpath.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  posixpath.data.json  posixpath.meta.json  subprocess.data.json  subprocess.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json  typing_extensions.data.json  typing_extensions.meta.json
.mypy_cache/3.9/_typeshed/: __init__.data.json  __init__.meta.json
.mypy_cache/3.9/collections/: __init__.data.json  __init__.meta.json
.mypy_cache/3.9/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json  machinery.data.json  machinery.meta.json
.mypy_cache/3.9/lib/: __init__.data.json  __init__.meta.json
.mypy_cache/3.9/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
notebooks/:  WelcometoColaboratory.ipynb
src/: test.py
src/lib/: calculator.py
